Update generated files with updated OAS
