# openapi_server/models/list_friends.py
@@ -7,21 +7,20 @@ import re  # noqa: F401
 from typing import Any, Dict, List, Optional  # noqa: F401
 
 from pydantic import AnyUrl, BaseModel, EmailStr, Field, validator  # noqa: F401
+from openapi_server.models.user import User
 
 
-class FavoriteFood(BaseModel):
+class ListFriends(BaseModel):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
 
-    FavoriteFood - a model defined in OpenAPI
+    ListFriends - a model defined in OpenAPI
 
-        id: The id of this FavoriteFood.
-        name: The name of this FavoriteFood.
+        friends: The friends of this ListFriends.
     """
 
-    id: int = Field(alias="id")
-    name: str = Field(alias="name")
+    friends: List[User] = Field(alias="friends")
 
 
-FavoriteFood.update_forward_refs()
+ListFriends.update_forward_refs()
